@@ -1,6 +1,6 @@
 Package: marked
 Version: 1.1.3
-Date: 2013-8-14
+Date: 2013-11-22
 Title: R Code for mark-recapture analysis
 Author: Jeff Laake <jeff.laake@noaa.gov>, Devin Johnson
     <devin.johnson@noaa.gov>, Paul Conn <paul.conn@noaa.gov>
