@@ -6,6 +6,9 @@ export(Phi.boxplot)
 export(Phi.mean)
 export(accumulate_data)
 export(cjs.hessian)
+export(cjs_delta)
+export(cjs_dmat)
+export(cjs_gamma)
 export(collapseCH)
 export(compute.real)
 export(create.model.list)
@@ -22,6 +25,9 @@ export(make.design.data)
 export(mcmc_mode)
 export(merge_design.covariates)
 export(model.table)
+export(ms2_gamma)
+export(ms_dmat)
+export(ms_gamma)
 export(naive.survival)
 export(p.boxplot)
 export(p.mean)
@@ -36,6 +42,8 @@ export(setup.model)
 export(setup.parameters)
 export(simHMM)
 export(splitCH)
+export(ums2_dmat)
+export(ums_dmat)
 import(Matrix)
 import(R2admb)
 import(Rcpp)
