@@ -10,6 +10,7 @@
 #' @param T number of occasions
 #' @param start matrix with values that are first occasion and for some CJS type models the state of first observation
 #' @aliases cjs_delta 
+#' @export
 #' @return 2-d array of initial state probability vectors for each id
 #' @author Jeff Laake <jeff.laake@@noaa.gov>
 #' @references Zucchini, W. and I.L. MacDonald. 2009. Hidden Markov Models for Time Series: An Introduction using R. Chapman and Hall, Boca Raton, FL. 275p. 
