@@ -7,7 +7,8 @@
 #' @param m number of states
 #' @param F initial occasion vector 
 #' @param T number of occasions
-#' @aliases cjs_dmat ms_dmat ums_dmat
+#' @aliases cjs_dmat ms_dmat ums_dmat ums2_dmat
+#' @export cjs_dmat ms_dmat ums_dmat ums2_dmat
 #' @return 4-d array of id and occasion-specific observation probability matrices - state-dependent distributions in Zucchini and MacDonald (2009)
 #' @author Jeff Laake <jeff.laake@@noaa.gov>
 #' @references Zucchini, W. and I.L. MacDonald. 2009. Hidden Markov Models for Time Series: An Introduction using R. Chapman and Hall, Boca Raton, FL. 275p. 
