@@ -7,7 +7,8 @@
 #' @param m number of states
 #' @param F initial occasion vector 
 #' @param T number of occasions
-#' @aliases cjs_gamma ms_gamma
+#' @aliases cjs_gamma ms_gamma ms2_gamma
+#' @export cjs_gamma ms_gamma ms2_gamma
 #' @return array of id and occasion-specific transition matrices - Gamma in Zucchini and MacDonald (2009)
 #' @author Jeff Laake <jeff.laake@@noaa.gov>
 #' @references Zucchini, W. and I.L. MacDonald. 2009. Hidden Markov Models for Time Series: An Introduction using R. Chapman and Hall, Boca Raton, FL. 275p. 
