@@ -1,4 +1,4 @@
-marked 1.1.3 29 Aug 2013
+marked 1.1.3 22 Nov 2013
 -----------------
 
 NEW FEATURES
@@ -16,6 +16,11 @@ CHANGES
 
 * code for creating design data was improved and is now much faster
 
+* error message given if data contains a field called id; id is forced to be a factor variable throughout
+
+* in mscjs, dml now refers to dml$fe to use fixed effects dm because it currently does not support random effects
+
+* removed use of ::: and exported more functions in marked to avoid that usage
 
 marked 1.1.1/1.1.2 14 Aug 2013
 -----------------
